# python-template

./: .env.example  .gitignore  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py
data/: README.md
logs/: README.md
notebooks/: 01_project_name.ipynb
src/project_name/: main.py  mylogger.py
tests/: conftest.py  test_mylogger.py
