[metadata]
name = project-name
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python template repository with logging, data, and testing structure
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourusername/project-name
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    python-dotenv>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    ruff
    coverage

[tool:pytest]
testpaths = tests

[tool:ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I"]  # E=errors, F=flake8 style, I=imports
fix = true
